[package]
name = "voxel_engine"
version = "0.1.0"
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
noiselib = "0.2.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
] }
